--- a/plconfig.yaml
+++ b/plconfig.yaml
@@ -1,10 +1,2 @@
-## Uncomment if you want to deploy to Kubernetes
-# deployment:
-#   name: APPNAME
-#   namespace: APPNAMESPACE
-#   chart: APPCHART # e.g. one of https://github.com/parcelLab/charts/tree/main/parcellab
-#   values:
-#     dev:
-#     prod:
-#     staging:
-#     test:
+## outdated
+
